3.4.1
	+ Set HTTPS env variable to 'On' always for SSL vhosts
	+ Removed the ssl mod check for ssl vhosts given that we don't use that
	  module at all
	+ Migrate previous configuration from 3.3 when upgrading
	+ When creating domains take into account SLD
3.4
	+ Check, at least, a listening port is mandatory
	+ Fix when webserver is not listening in HTTP port
	+ Don't regenerate certificate if it has the same CN that the
	  virtual host name
	+ Register in Apache configuration the public port used to reach it so
	  automatic redirects work behind haproxy
	+ Modules changed in initialSetup have now its configuration saved
	+ Added support for internal virtual domains (only for openchange
	  for now)
	+ Updated to use the new haproxy API
	+ Adapt configuration for Apache 2.4
	+ Set version to 3.4
3.3
	+ Switch from Error to TryCatch for exception handling
	+ Added missing EBox::Exceptions uses
	+ Delete migration code from old versions
	+ Set version to 3.3
3.2
	+ Set version to 3.2
3.1.5
	+ Override daemons when migrating from 3.0
3.1.4
	+ Avoid crash if zentyal-users is not installed
3.1.3
	+ Added menu icon
	+ Adapted to the new user API.
3.1.2
	+ Added GUI warning when enabling UserDir, telling about the need of
	  creating the public_html dir and giving permissions to www-data
3.1.1
	+ Remove deprecated backup domains methods
3.1
	+ Updated to reflect the Apache -> WebAdmin rename.
	+ Removed no longer required explicit disabling of apache2 init script
	  as it is now managed by the framework
	+ More error checking when creating virtual host directories
	+ Depend on zentyal-core 3.1
3.0.3
	+ Fixed bug when checking hostname aliases on creation of a
	  virtual host
	+ When dumping config the no existence of configuration
	  directories generates a warning instead of a error
3.0.2
	+ Integration with Disaster Recovery service
	+ Fixed error when creating directories for virtual host for hostname
	+ Add DNS records for virtual hosts but without IP addresses
3.0.1