@@ -1,3 +1,5 @@
+HEAD
+	+ Force haproxy restart if service status changes
 3.4.1
 	+ Set HTTPS env variable to 'On' always for SSL vhosts
 	+ Removed the ssl mod check for ssl vhosts given that we don't use that
